src/docs/metadata/knowledge-graph/1.0.0/audiovisual/en/index.md
---
layout: "default"
title: "Data model Audiovisual archive objects"
parent: "Knowledge Graph"
nav_order: 1
nav_exclude: True
---
<svg xmlns="http://www.w3.org/2000/svg" style="display: none;"><symbol id="svg-external-link" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title id="svg-external-link-title">(external link)</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line> </symbol></svg>

Data model Audiovisual archive objects
====================

**Version:** 1.0.0

**Previous version:** 

**Created:** 2024-01-09

**Last modified:** 2025-02-13

**SHACL file:** [audiovisual.shacl.ttl](audiovisual.shacl.ttl)

**Other languages:**
[nl](../nl)
, [fr](../fr)

**Authors:**
[Miel Vander Sande](mailto:miel.vandersande@meemoo.be)
, [Milan Valadou](mailto:milan.valadou@meemoo.be)
, [Lennert Van de Velde](mailto:lennert.vandevelde@meemoo.be)


Data model to describe the content of audiovisual objects.

<div id="zoom" class="table-wrapper">
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" contentStyleType="text/css" preserveAspectRatio="none" version="1.1" viewBox="0 0 1900 310" zoomAndPan="magnify"><defs/><g><a href="#haDes%3AAudio" target="_top" title="#haDes%3AAudio" xlink:actuate="onRequest" xlink:href="#haDes%3AAudio" xlink:show="new" xlink:title="#haDes%3AAudio" xlink:type="simple"><g id="elem_haDes_Audio"><rect codeLine="15" fill="#F1F1F1" height="26.2969" id="haDes_Audio" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="154" x="7" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="45" x="10" y="196.4951">Audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="55" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="99" x="59" y="196.4951">(haDes:Audio)</text></g></a><a href="#premis%3AIntellectualEntity" target="_top" title="#premis%3AIntellectualEntity" xlink:actuate="onRequest" xlink:href="#premis%3AIntellectualEntity" xlink:show="new" xlink:title="#premis%3AIntellectualEntity" xlink:type="simple"><g id="elem_premis_IntellectualEntity"><rect codeLine="29" fill="#F1F1F1" height="26.2969" id="premis_IntellectualEntity" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="320" x="278" y="278"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="86" x="281" y="295.9951">Intellectual</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="367" y="295.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="45" x="372" y="295.9951">entity</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="417" y="295.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="174" x="421" y="295.9951">(premis:IntellectualEntity)</text></g></a><a href="#haObj%3ACarrierRepresentation" target="_top" title="#haObj%3ACarrierRepresentation" xlink:actuate="onRequest" xlink:href="#haObj%3ACarrierRepresentation" xlink:show="new" xlink:title="#haObj%3ACarrierRepresentation" xlink:type="simple"><g id="elem_haObj_CarrierRepresentation"><rect codeLine="17" fill="#F1F1F1" height="66.8906" id="haObj_CarrierRepresentation" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="410" x="972" y="7"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="55" x="982.5" y="24.9951">Carrier</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="1037.5" y="24.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="118" x="1042.5" y="24.9951">representation</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1160.5" y="24.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="207" x="1164.5" y="24.9951">(haObj:CarrierRepresentation)</text><line style="stroke:#181818;stroke-width:0.5;" x1="973" x2="1381" y1="33.2969" y2="33.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="54" x="978" y="50.292">number</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1032" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="13" x="1036" y="50.292">of</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1049" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1053" y="50.292">audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1091" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="63" x="1095" y="50.292">channels</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1158" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="1162" y="50.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1167" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="165" x="1171" y="50.292">xsd:nonNegativeInteger</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1336" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="1340" y="50.292">[0..1]</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="54" x="978" y="66.5889">number</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1032" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="13" x="1036" y="66.5889">of</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1049" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1053" y="66.5889">audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1091" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="42" x="1095" y="66.5889">tracks</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1137" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="1141" y="66.5889">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1146" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="165" x="1150" y="66.5889">xsd:nonNegativeInteger</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1315" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="1319" y="66.5889">[0..1]</text></g></a><a href="#premis%3ARepresentation" target="_top" title="#premis%3ARepresentation" xlink:actuate="onRequest" xlink:href="#premis%3ARepresentation" xlink:show="new" xlink:title="#premis%3ARepresentation" xlink:type="simple"><g id="elem_premis_Representation"><rect codeLine="18" fill="#F1F1F1" height="26.2969" id="premis_Representation" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="300" x="1027" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="121" x="1030" y="196.4951">Representation</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1151" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="169" x="1155" y="196.4951">(premis:Representation)</text></g></a><a href="../../terms/en#skos%3AConcept" target="_top" title="../../terms/en#skos%3AConcept" xlink:actuate="onRequest" xlink:href="../../terms/en#skos%3AConcept" xlink:show="new" xlink:title="../../terms/en#skos%3AConcept" xlink:type="simple"><g id="elem_skos_Concept"><rect codeLine="19" fill="#F1F1F1" height="26.2969" id="skos_Concept" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="183" x="1362.5" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="66" x="1365.5" y="196.4951">Concept</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1431.5" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="107" x="1435.5" y="196.4951">(skos:Concept)</text></g></a><a href="#haDes%3ADVD" target="_top" title="#haDes%3ADVD" xlink:actuate="onRequest" xlink:href="#haDes%3ADVD" xlink:show="new" xlink:title="#haDes%3ADVD" xlink:type="simple"><g id="elem_haDes_DVD"><rect codeLine="20" fill="#F1F1F1" height="26.2969" id="haDes_DVD" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="134" x="226" y="27.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="33" x="229" y="45.4951">DVD</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="262" y="45.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="91" x="266" y="45.4951">(haDes:DVD)</text></g></a><a href="#haDes%3ADVDChapter" target="_top" title="#haDes%3ADVDChapter" xlink:actuate="onRequest" xlink:href="#haDes%3ADVDChapter" xlink:show="new" xlink:title="#haDes%3ADVDChapter" xlink:type="simple"><g id="elem_haDes_DVDChapter"><rect codeLine="22" fill="#F1F1F1" height="50.5938" id="haDes_DVDChapter" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="341" x="267.5" y="166"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="33" x="313.5" y="183.9951">DVD</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="346.5" y="183.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="61" x="351.5" y="183.9951">chapter</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="412.5" y="183.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="146" x="416.5" y="183.9951">(haDes:DVDChapter)</text><line style="stroke:#181818;stroke-width:0.5;" x1="268.5" x2="607.5" y1="192.2969" y2="192.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="53" x="273.5" y="209.292">chapter</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="326.5" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="54" x="330.5" y="209.292">number</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="384.5" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="388.5" y="209.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="393.5" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="165" x="397.5" y="209.292">xsd:nonNegativeInteger</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="562.5" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="566.5" y="209.292">[1..1]</text></g></a><a href="#haDes%3AImage" target="_top" title="#haDes%3AImage" xlink:actuate="onRequest" xlink:href="#haDes%3AImage" xlink:show="new" xlink:title="#haDes%3AImage" xlink:type="simple"><g id="elem_haDes_Image"><rect codeLine="24" fill="#F1F1F1" height="26.2969" id="haDes_Image" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="159" x="643.5" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="47" x="646.5" y="196.4951">Image</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="693.5" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="102" x="697.5" y="196.4951">(haDes:Image)</text></g></a><a href="#haObj%3APhysicalCarrier" target="_top" title="#haObj%3APhysicalCarrier" xlink:actuate="onRequest" xlink:href="#haObj%3APhysicalCarrier" xlink:show="new" xlink:title="#haObj%3APhysicalCarrier" xlink:type="simple"><g id="elem_haObj_PhysicalCarrier"><rect codeLine="26" fill="#F1F1F1" height="50.5938" id="haObj_PhysicalCarrier" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="287" x="1505.5" y="15"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="64" x="1508.5" y="32.9951">Physical</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="1572.5" y="32.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="53" x="1577.5" y="32.9951">carrier</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1630.5" y="32.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="155" x="1634.5" y="32.9951">(haObj:PhysicalCarrier)</text><line style="stroke:#181818;stroke-width:0.5;" x1="1506.5" x2="1791.5" y1="41.2969" y2="41.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1511.5" y="58.292">audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1549.5" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1553.5" y="58.292">noise</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1591.5" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="66" x="1595.5" y="58.292">reduction</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1661.5" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="1665.5" y="58.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1670.5" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="68" x="1674.5" y="58.292">xsd:string</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1742.5" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="1746.5" y="58.292">[0..1]</text></g></a><a href="#premis%3AStorageLocation" target="_top" title="#premis%3AStorageLocation" xlink:actuate="onRequest" xlink:href="#premis%3AStorageLocation" xlink:show="new" xlink:title="#premis%3AStorageLocation" xlink:type="simple"><g id="elem_premis_StorageLocation"><rect codeLine="27" fill="#F1F1F1" height="26.2969" id="premis_StorageLocation" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="313" x="1580.5" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="62" x="1583.5" y="196.4951">Storage</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="1645.5" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="62" x="1650.5" y="196.4951">location</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1712.5" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="174" x="1716.5" y="196.4951">(premis:StorageLocation)</text></g></a><a href="#haDes%3AVideo" target="_top" title="#haDes%3AVideo" xlink:actuate="onRequest" xlink:href="#haDes%3AVideo" xlink:show="new" xlink:title="#haDes%3AVideo" xlink:type="simple"><g id="elem_haDes_Video"><rect codeLine="28" fill="#F1F1F1" height="26.2969" id="haDes_Video" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="154" x="838" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="45" x="841" y="196.4951">Video</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="886" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="99" x="890" y="196.4951">(haDes:Video)</text></g></a><g id="link_haDes_Audio_premis_IntellectualEntity"><path codeLine="31" d="M102.33,204.66 C122.48,217.44 156.23,237.18 188,248 C229.56,262.16 258.8799,268.9847 300.9299,275.3047 " fill="none" id="haDes_Audio-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="318.73,277.98,301.8217,269.3713,300.0382,281.2381,318.73,277.98" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haObj_CarrierRepresentation_premis_Representation"><path codeLine="34" d="M1177,74.2 C1177,107.09 1177,138.07 1177,160.5 " fill="none" id="haObj_CarrierRepresentation-to-premis_Representation" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="1177,178.5,1183,160.5,1171,160.5,1177,178.5" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haDes_DVD_premis_IntellectualEntity"><path codeLine="42" d="M283.92,53.74 C262.62,84.1 213.85,164.19 250,217 C272.54,249.94 294.899,263.3774 332.059,273.2974 " fill="none" id="haDes_DVD-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="349.45,277.94,333.6065,267.5004,330.5115,279.0944,349.45,277.94" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haDes_DVD_haDes_DVDChapter"><path codeLine="44" d="M288.43,53.53 C281.93,72.83 272.63,111.09 290,136 C298.85,148.69 305.7454,155.5336 319.3154,163.0136 " fill="none" id="haDes_DVD-to-haDes_DVDChapter" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#454645" points="324.57,165.91,318.6191,158.0623,320.1912,163.4963,314.7572,165.0684,324.57,165.91" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#000000" points="296.3575,124.8786,296.7303,115.3753,291.0732,116.9712,296.3575,124.8786" style="stroke:#000000;stroke-width:1.0;"/><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="23" x="304" y="124.5669">has</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="327" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="26" x="331" y="124.5669">part</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="357" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="33" x="361" y="124.5669">[0..*]</text></g><g id="link_haDes_DVDChapter_haDes_DVD"><path codeLine="49" d="M431.35,165.85 C425.34,147.17 414.94,121.79 399,104 C378.32,80.93 352.5358,66.4026 329.3158,56.0026 " fill="none" id="haDes_DVDChapter-to-haDes_DVD" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#454645" points="323.84,53.55,330.4187,60.8794,328.4032,55.5938,333.6888,53.5783,323.84,53.55" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#000000" points="420.5972,116.403,424.5997,125.0303,428.9063,121.03,420.5972,116.403" style="stroke:#000000;stroke-width:1.0;"/><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="10" x="433" y="124.5669">is</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="443" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="26" x="447" y="124.5669">part</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="473" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="12" x="477" y="124.5669">of</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="489" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="34" x="493" y="124.5669">[1..1]</text></g><g id="link_haDes_DVDChapter_premis_IntellectualEntity"><path codeLine="46" d="M438,217.1 C438,236.51 438,244.75 438,259.87 " fill="none" id="haDes_DVDChapter-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="438,277.87,444,259.87,432,259.87,438,277.87" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haDes_Image_premis_IntellectualEntity"><path codeLine="52" d="M687.77,204.55 C632.96,223.3 544.9413,253.4146 490.1813,272.1446 " fill="none" id="haDes_Image-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="473.15,277.97,492.1231,277.8217,488.2395,266.4675,473.15,277.97" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haObj_PhysicalCarrier_premis_StorageLocation"><path codeLine="55" d="M1663.53,66.1 C1682.57,98.34 1706.0752,138.1419 1720.5652,162.6719 " fill="none" id="haObj_PhysicalCarrier-to-premis_StorageLocation" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="1729.72,178.17,1725.7312,159.6203,1715.3992,165.7235,1729.72,178.17" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haObj_PhysicalCarrier_skos_Concept"><path codeLine="58" d="M1544.25,66.04 C1522.53,75.08 1501.32,87.35 1485,104 C1464.56,124.85 1458.2629,154.1387 1455.9029,172.5487 " fill="none" id="haObj_PhysicalCarrier-to-skos_Concept" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#454645" points="1455.14,178.5,1460.2519,170.0817,1455.7758,173.5406,1452.3168,169.0644,1455.14,178.5" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#000000" points="1486.8078,123.9812,1494.8445,118.8957,1490.3205,115.1431,1486.8078,123.9812" style="stroke:#000000;stroke-width:1.0;"/><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="35" x="1499" y="117.0669">audio</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="1534" y="117.0669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="60" x="1538" y="117.0669">recording</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="1598" y="117.0669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="39" x="1602" y="117.0669">speed</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="1641" y="117.0669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="34" x="1645" y="117.0669">[0..1]</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="63" x="1499" y="132.1997">iec-60094</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="1562" y="132.1997"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="28" x="1566" y="132.1997">type</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="1594" y="132.1997"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="34" x="1598" y="132.1997">[0..1]</text></g><g id="link_haDes_Video_premis_IntellectualEntity"><path codeLine="61" d="M870.68,204.55 C854.75,208.72 836.62,213.27 820,217 C711.79,241.27 602.9089,261.3379 526.0589,274.8279 " fill="none" id="haDes_Video-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="508.33,277.94,527.0963,280.7376,525.0216,268.9183,508.33,277.94" style="stroke:#0000FF;stroke-width:1.0;"/></g></g></svg>
</div>

## Namespaces

| Prefix | URI      |
| :----- | :------- |
| dct     | [http://purl.org/dc/terms/](http://purl.org/dc/terms/) |
| ebucore     | [http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#](http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#) |
| haDes     | [https://data.hetarchief.be/ns/description/](https://data.hetarchief.be/ns/description/) |
| haObj     | [https://data.hetarchief.be/ns/object/](https://data.hetarchief.be/ns/object/) |
| owl     | [http://www.w3.org/2002/07/owl#](http://www.w3.org/2002/07/owl#) |
| pav     | [http://purl.org/pav/](http://purl.org/pav/) |
| premis     | [http://www.loc.gov/premis/rdf/v3/](http://www.loc.gov/premis/rdf/v3/) |
| rdf     | [http://www.w3.org/1999/02/22-rdf-syntax-ns#](http://www.w3.org/1999/02/22-rdf-syntax-ns#) |
| rdfs     | [http://www.w3.org/2000/01/rdf-schema#](http://www.w3.org/2000/01/rdf-schema#) |
| rel     | [http://id.loc.gov/vocabulary/preservation/relationshipSubType/](http://id.loc.gov/vocabulary/preservation/relationshipSubType/) |
| schema     | [https://schema.org/](https://schema.org/) |
| sh     | [http://www.w3.org/ns/shacl#](http://www.w3.org/ns/shacl#) |
| skos     | [http://www.w3.org/2004/02/skos/core#](http://www.w3.org/2004/02/skos/core#) |
| vann     | [http://purl.org/vocab/vann/](http://purl.org/vocab/vann/) |
| xsd     | [http://www.w3.org/2001/XMLSchema#](http://www.w3.org/2001/XMLSchema#) |

## Classes & Properties

**Classes:** 
 [Audio](#haDes%3AAudio) |  [Carrier representation](#haObj%3ACarrierRepresentation) |  [Concept <svg class="svg-external-link" viewBox="0 0 24 24" aria-labelledby="svg-external-link-title"><use xlink:href="#svg-external-link"></use></svg>](../../terms/en#skos%3AConcept){:target="_blank"} |  [DVD](#haDes%3ADVD) |  [DVD chapter](#haDes%3ADVDChapter) |  [Image](#haDes%3AImage) |  [Physical carrier](#haObj%3APhysicalCarrier) |  [Video](#haDes%3AVideo)
## <a id="haDes%3AAudio"></a>Audio <small>[(haDes:Audio)](https://data.hetarchief.be/ns/description/Audio)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from digital born audio or an analog carrier of type audio.




## <a id="haObj%3ACarrierRepresentation"></a>Carrier representation <small>[(haObj:CarrierRepresentation)](https://data.hetarchief.be/ns/object/CarrierRepresentation)</small>


**Subclass of:** 
[Representation](#premis%3ARepresentation)

A physical or digital representation of an archived intellectual entity that is stored on a physical carrier such as a video tape, film reel, paper or canvas.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AnumberOfAudioChannels'></a>number of audio channels <br> <small>[(haDes:numberOfAudioChannels)](https://data.hetarchief.be/ns/description/numberOfAudioChannels)</small> | The number of parallel audio channels that the audio track contains. | `0..1` | [`xsd:nonNegativeInteger`](http://www.w3.org/2001/XMLSchema#nonNegativeInteger)  |
| <a id='haDes%3AnumberOfAudioTracks'></a>number of audio tracks <br> <small>[(haDes:numberOfAudioTracks)](https://data.hetarchief.be/ns/description/numberOfAudioTracks)</small> | The number of audio tracks that the representation contains. | `0..1` | [`xsd:nonNegativeInteger`](http://www.w3.org/2001/XMLSchema#nonNegativeInteger)  |



## <a id="haDes%3ADVD"></a>DVD <small>[(haDes:DVD)](https://data.hetarchief.be/ns/description/DVD)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from an analog carrier of type DVD, and represents the DVD as a whole.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='rel%3Ahsp'></a>has part <br> <small>[(rel:hsp)](http://id.loc.gov/vocabulary/preservation/relationshipSubType/hsp)</small> | Indicates the DVD chapters that make up the DVD as a whole. | `0..*` | [DVD chapter](#haDes%3ADVDChapter)  |



## <a id="haDes%3ADVDChapter"></a>DVD chapter <small>[(haDes:DVDChapter)](https://data.hetarchief.be/ns/description/DVDChapter)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from an analog carrier of type DVD, and represents a specific DVD chapter.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AchapterNumber'></a>chapter number <br> <small>[(haDes:chapterNumber)](https://data.hetarchief.be/ns/description/chapterNumber)</small> | Indicates the sequence number of the DVD chapter. | `1..1` | [`xsd:nonNegativeInteger`](http://www.w3.org/2001/XMLSchema#nonNegativeInteger)  |
| <a id='rel%3Aisi'></a>is part of <br> <small>[(rel:isi)](http://id.loc.gov/vocabulary/preservation/relationshipSubType/isi)</small> | Indicates the DVD that the chapter is part of. | `1..1` | [DVD](#haDes%3ADVD)  |



## <a id="haDes%3AImage"></a>Image <small>[(haDes:Image)](https://data.hetarchief.be/ns/description/Image)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from a digital born image or an analog carrier of type image.




## <a id="haObj%3APhysicalCarrier"></a>Physical carrier <small>[(haObj:PhysicalCarrier)](https://data.hetarchief.be/ns/object/PhysicalCarrier)</small>


**Subclass of:** 
[Storage location](#premis%3AStorageLocation)

**Subclasses:** 
[Audio reel](#haDes%3AAudioReel)
, [Image reel](#haDes%3AImageReel)

A physical carrier in which data, sound, images, etc., are stored.  For certain categories of material, the physical carrier consists of a storage medium (e.g., tape, film) sometimes encased in a plastic, metal, etc., housing (e.g., cassette, cartridge) that is an integral part of the item.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AaudioNoiseReduction'></a>audio noise reduction <br> <small>[(haDes:audioNoiseReduction)](https://data.hetarchief.be/ns/description/audioNoiseReduction)</small> | The technology used for noise reduction in audio. | `0..1` | [`xsd:string`](http://www.w3.org/2001/XMLSchema#string) <br>_Possible values: [`"DBX"`](DBX), [`"Dolby A"`](Dolby A), [`"Dolby B"`](Dolby B), [`"Dolby C"`](Dolby C), [`"Dolby D"`](Dolby D)_ |
| <a id='haDes%3AaudioRecordingSpeed'></a>audio recording speed <br> <small>[(haDes:audioRecordingSpeed)](https://data.hetarchief.be/ns/description/audioRecordingSpeed)</small> | The speed with which open reel audio or a gramophone record is recorded. | `0..1` | [Concept <svg class="svg-external-link" viewBox="0 0 24 24" aria-labelledby="svg-external-link-title"><use xlink:href="#svg-external-link"></use></svg>](../../terms/en#skos%3AConcept){:target="_blank"}  |
| <a id='haDes%3Aiec60094Type'></a>iec-60094 type <br> <small>[(haDes:iec60094Type)](https://data.hetarchief.be/ns/description/iec60094Type)</small> | The IEC-60094 Type of the compact cassette that indicates the magnetic material used as a binder on top of the polyester bottom layer of the cassette. | `0..1` | [Concept <svg class="svg-external-link" viewBox="0 0 24 24" aria-labelledby="svg-external-link-title"><use xlink:href="#svg-external-link"></use></svg>](../../terms/en#skos%3AConcept){:target="_blank"} <br>_Possible values: [`<https://data.hetarchief.be/id/iec60094-type/I>`](https://data.hetarchief.be/id/iec60094-type/I), [`<https://data.hetarchief.be/id/iec60094-type/II>`](https://data.hetarchief.be/id/iec60094-type/II), [`<https://data.hetarchief.be/id/iec60094-type/III>`](https://data.hetarchief.be/id/iec60094-type/III), [`<https://data.hetarchief.be/id/iec60094-type/IV>`](https://data.hetarchief.be/id/iec60094-type/IV)_ |



## <a id="haDes%3AVideo"></a>Video <small>[(haDes:Video)](https://data.hetarchief.be/ns/description/Video)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from digital born video or an analog carrier of type video.




[^1]: Unique language tags required
<style>
#zoom {
  height: 60vh;
  padding: 5px;
}

#zoom > svg {
    width: 100%;
    height: 100%;
}

.svg-external-link {
  width: 16px;
  height: 16px;
}
</style>

<script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.5.0/dist/svg-pan-zoom.min.js"></script>
<script>
window.onload = (event) => {
  svgPanZoom('#zoom > svg', {controlIconsEnabled: true})
};
</script>
