src/docs/metadata/knowledge-graph/1.1.0/audiovisual/en/index.md
---
layout: "default"
title: "Data model Audiovisual archive objects"
parent: "Knowledge Graph"
nav_order: 1
nav_exclude: True
---
<svg xmlns="http://www.w3.org/2000/svg" style="display: none;"><symbol id="svg-external-link" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title id="svg-external-link-title">(external link)</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line> </symbol></svg>

Data model Audiovisual archive objects
====================

**Version:** 1.1.0

**Previous version:** 

**Created:** 2024-01-09

**Last modified:** 2025-02-13

**SHACL file:** [audiovisual.shacl.ttl](audiovisual.shacl.ttl)

**Other languages:**
[nl](../nl)
, [fr](../fr)

**Authors:**
[Milan Valadou](mailto:milan.valadou@meemoo.be)
, [Miel Vander Sande](mailto:miel.vandersande@meemoo.be)
, [Lennert Van de Velde](mailto:lennert.vandevelde@meemoo.be)


Data model to describe the content of audiovisual objects.

<div id="zoom" class="table-wrapper">
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" contentStyleType="text/css" preserveAspectRatio="none" version="1.1" viewBox="0 0 2311 310" zoomAndPan="magnify"><defs/><g><a href="#haDes%3AAudio" target="_top" title="#haDes%3AAudio" xlink:actuate="onRequest" xlink:href="#haDes%3AAudio" xlink:show="new" xlink:title="#haDes%3AAudio" xlink:type="simple"><g id="elem_haDes_Audio"><rect codeLine="15" fill="#F1F1F1" height="50.5938" id="haDes_Audio" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="359" x="7" y="166"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="45" x="112.5" y="183.9951">Audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="157.5" y="183.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="99" x="161.5" y="183.9951">(haDes:Audio)</text><line style="stroke:#181818;stroke-width:0.5;" x1="8" x2="365" y1="192.2969" y2="192.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="90" x="13" y="209.292">broadcasting</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="103" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="85" x="107" y="209.292">organization</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="192" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="196" y="209.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="201" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="115" x="205" y="209.292">org:Organization</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="320" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="324" y="209.292">[0..1]</text></g></a><a href="#premis%3AIntellectualEntity" target="_top" title="#premis%3AIntellectualEntity" xlink:actuate="onRequest" xlink:href="#premis%3AIntellectualEntity" xlink:show="new" xlink:title="#premis%3AIntellectualEntity" xlink:type="simple"><g id="elem_premis_IntellectualEntity"><rect codeLine="29" fill="#F1F1F1" height="26.2969" id="premis_IntellectualEntity" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="320" x="483.5" y="278"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="86" x="486.5" y="295.9951">Intellectual</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="572.5" y="295.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="45" x="577.5" y="295.9951">entity</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="622.5" y="295.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="174" x="626.5" y="295.9951">(premis:IntellectualEntity)</text></g></a><a href="#haObj%3ACarrierRepresentation" target="_top" title="#haObj%3ACarrierRepresentation" xlink:actuate="onRequest" xlink:href="#haObj%3ACarrierRepresentation" xlink:show="new" xlink:title="#haObj%3ACarrierRepresentation" xlink:type="simple"><g id="elem_haObj_CarrierRepresentation"><rect codeLine="17" fill="#F1F1F1" height="66.8906" id="haObj_CarrierRepresentation" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="410" x="1382.5" y="7"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="55" x="1393" y="24.9951">Carrier</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="1448" y="24.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="118" x="1453" y="24.9951">representation</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1571" y="24.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="207" x="1575" y="24.9951">(haObj:CarrierRepresentation)</text><line style="stroke:#181818;stroke-width:0.5;" x1="1383.5" x2="1791.5" y1="33.2969" y2="33.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="54" x="1388.5" y="50.292">number</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1442.5" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="13" x="1446.5" y="50.292">of</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1459.5" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1463.5" y="50.292">audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1501.5" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="63" x="1505.5" y="50.292">channels</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1568.5" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="1572.5" y="50.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1577.5" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="165" x="1581.5" y="50.292">xsd:nonNegativeInteger</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1746.5" y="50.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="1750.5" y="50.292">[0..1]</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="54" x="1388.5" y="66.5889">number</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1442.5" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="13" x="1446.5" y="66.5889">of</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1459.5" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1463.5" y="66.5889">audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1501.5" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="42" x="1505.5" y="66.5889">tracks</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1547.5" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="1551.5" y="66.5889">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1556.5" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="165" x="1560.5" y="66.5889">xsd:nonNegativeInteger</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1725.5" y="66.5889"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="1729.5" y="66.5889">[0..1]</text></g></a><a href="#premis%3ARepresentation" target="_top" title="#premis%3ARepresentation" xlink:actuate="onRequest" xlink:href="#premis%3ARepresentation" xlink:show="new" xlink:title="#premis%3ARepresentation" xlink:type="simple"><g id="elem_premis_Representation"><rect codeLine="18" fill="#F1F1F1" height="26.2969" id="premis_Representation" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="300" x="1437.5" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="121" x="1440.5" y="196.4951">Representation</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1561.5" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="169" x="1565.5" y="196.4951">(premis:Representation)</text></g></a><a href="../../rights/en#skos%3AConcept" target="_top" title="../../rights/en#skos%3AConcept" xlink:actuate="onRequest" xlink:href="../../rights/en#skos%3AConcept" xlink:show="new" xlink:title="../../rights/en#skos%3AConcept" xlink:type="simple"><g id="elem_skos_Concept"><rect codeLine="19" fill="#F1F1F1" height="26.2969" id="skos_Concept" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="183" x="1773" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="66" x="1776" y="196.4951">Concept</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1842" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="107" x="1846" y="196.4951">(skos:Concept)</text></g></a><a href="#haDes%3ADVD" target="_top" title="#haDes%3ADVD" xlink:actuate="onRequest" xlink:href="#haDes%3ADVD" xlink:show="new" xlink:title="#haDes%3ADVD" xlink:type="simple"><g id="elem_haDes_DVD"><rect codeLine="20" fill="#F1F1F1" height="50.5938" id="haDes_DVD" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="359" x="319" y="15"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="33" x="434.5" y="32.9951">DVD</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="467.5" y="32.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="91" x="471.5" y="32.9951">(haDes:DVD)</text><line style="stroke:#181818;stroke-width:0.5;" x1="320" x2="677" y1="41.2969" y2="41.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="90" x="325" y="58.292">broadcasting</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="415" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="85" x="419" y="58.292">organization</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="504" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="508" y="58.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="513" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="115" x="517" y="58.292">org:Organization</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="632" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="636" y="58.292">[0..1]</text></g></a><a href="#haDes%3ADVDChapter" target="_top" title="#haDes%3ADVDChapter" xlink:actuate="onRequest" xlink:href="#haDes%3ADVDChapter" xlink:show="new" xlink:title="#haDes%3ADVDChapter" xlink:type="simple"><g id="elem_haDes_DVDChapter"><rect codeLine="22" fill="#F1F1F1" height="50.5938" id="haDes_DVDChapter" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="341" x="473" y="166"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="33" x="519" y="183.9951">DVD</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="552" y="183.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="61" x="557" y="183.9951">chapter</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="618" y="183.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="146" x="622" y="183.9951">(haDes:DVDChapter)</text><line style="stroke:#181818;stroke-width:0.5;" x1="474" x2="813" y1="192.2969" y2="192.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="53" x="479" y="209.292">chapter</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="532" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="54" x="536" y="209.292">number</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="590" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="594" y="209.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="599" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="165" x="603" y="209.292">xsd:nonNegativeInteger</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="768" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="772" y="209.292">[1..1]</text></g></a><a href="#haDes%3AImage" target="_top" title="#haDes%3AImage" xlink:actuate="onRequest" xlink:href="#haDes%3AImage" xlink:show="new" xlink:title="#haDes%3AImage" xlink:type="simple"><g id="elem_haDes_Image"><rect codeLine="24" fill="#F1F1F1" height="26.2969" id="haDes_Image" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="159" x="849" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="47" x="852" y="196.4951">Image</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="899" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="102" x="903" y="196.4951">(haDes:Image)</text></g></a><a href="#haObj%3APhysicalCarrier" target="_top" title="#haObj%3APhysicalCarrier" xlink:actuate="onRequest" xlink:href="#haObj%3APhysicalCarrier" xlink:show="new" xlink:title="#haObj%3APhysicalCarrier" xlink:type="simple"><g id="elem_haObj_PhysicalCarrier"><rect codeLine="26" fill="#F1F1F1" height="50.5938" id="haObj_PhysicalCarrier" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="287" x="1916" y="15"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="64" x="1919" y="32.9951">Physical</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="1983" y="32.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="53" x="1988" y="32.9951">carrier</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="2041" y="32.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="155" x="2045" y="32.9951">(haObj:PhysicalCarrier)</text><line style="stroke:#181818;stroke-width:0.5;" x1="1917" x2="2202" y1="41.2969" y2="41.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1922" y="58.292">audio</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1960" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="38" x="1964" y="58.292">noise</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="2002" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="66" x="2006" y="58.292">reduction</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="2072" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="2076" y="58.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="2081" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="68" x="2085" y="58.292">xsd:string</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="2153" y="58.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="2157" y="58.292">[0..1]</text></g></a><a href="#premis%3AStorageLocation" target="_top" title="#premis%3AStorageLocation" xlink:actuate="onRequest" xlink:href="#premis%3AStorageLocation" xlink:show="new" xlink:title="#premis%3AStorageLocation" xlink:type="simple"><g id="elem_premis_StorageLocation"><rect codeLine="27" fill="#F1F1F1" height="26.2969" id="premis_StorageLocation" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="313" x="1991" y="178.5"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="62" x="1994" y="196.4951">Storage</text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="5" x="2056" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="62" x="2061" y="196.4951">location</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="2123" y="196.4951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="174" x="2127" y="196.4951">(premis:StorageLocation)</text></g></a><a href="#haDes%3AVideo" target="_top" title="#haDes%3AVideo" xlink:actuate="onRequest" xlink:href="#haDes%3AVideo" xlink:show="new" xlink:title="#haDes%3AVideo" xlink:type="simple"><g id="elem_haDes_Video"><rect codeLine="28" fill="#F1F1F1" height="50.5938" id="haDes_Video" rx="3.5" ry="3.5" style="stroke:#181818;stroke-width:0.5;" width="359" x="1043" y="166"/><text fill="#000000" font-family="sans-serif" font-size="14" font-weight="bold" lengthAdjust="spacing" textLength="45" x="1148.5" y="183.9951">Video</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1193.5" y="183.9951"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="99" x="1197.5" y="183.9951">(haDes:Video)</text><line style="stroke:#181818;stroke-width:0.5;" x1="1044" x2="1401" y1="192.2969" y2="192.2969"/><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="90" x="1049" y="209.292">broadcasting</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1139" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="85" x="1143" y="209.292">organization</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1228" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="5" x="1232" y="209.292">:</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1237" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" font-style="italic" lengthAdjust="spacing" textLength="115" x="1241" y="209.292">org:Organization</text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="4" x="1356" y="209.292"> </text><text fill="#000000" font-family="sans-serif" font-size="14" lengthAdjust="spacing" textLength="36" x="1360" y="209.292">[0..1]</text></g></a><g id="link_haDes_Audio_premis_IntellectualEntity"><path codeLine="31" d="M270.65,217.02 C308.07,227.41 352.78,239.14 393.5,248 C448.55,259.97 493.2599,267.7289 541.9999,275.2389 " fill="none" id="haDes_Audio-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="559.79,277.98,542.9137,269.3088,541.0862,281.1689,559.79,277.98" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haObj_CarrierRepresentation_premis_Representation"><path codeLine="36" d="M1587.5,74.2 C1587.5,107.09 1587.5,138.07 1587.5,160.5 " fill="none" id="haObj_CarrierRepresentation-to-premis_Representation" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="1587.5,178.5,1593.5,160.5,1581.5,160.5,1587.5,178.5" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haDes_DVD_premis_IntellectualEntity"><path codeLine="44" d="M481.14,66.1 C458.01,102.19 423.52,170.27 455.5,217 C478.04,249.94 500.399,263.3774 537.559,273.2974 " fill="none" id="haDes_DVD-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="554.95,277.94,539.1065,267.5004,536.0115,279.0944,554.95,277.94" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haDes_DVD_haDes_DVDChapter"><path codeLine="47" d="M490.14,66.3 C484.87,86.83 481.42,115.8 495.5,136 C504.35,148.69 511.2454,155.5336 524.8154,163.0136 " fill="none" id="haDes_DVD-to-haDes_DVDChapter" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#454645" points="530.07,165.91,524.1191,158.0623,525.6912,163.4963,520.2572,165.0684,530.07,165.91" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#000000" points="502.1875,124.773,501.9013,115.2668,496.3683,117.2506,502.1875,124.773" style="stroke:#000000;stroke-width:1.0;"/><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="23" x="509.5" y="124.5669">has</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="532.5" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="26" x="536.5" y="124.5669">part</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="562.5" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="33" x="566.5" y="124.5669">[0..*]</text></g><g id="link_haDes_DVDChapter_haDes_DVD"><path codeLine="53" d="M636.85,165.85 C630.84,147.17 620.44,121.79 604.5,104 C590.67,88.57 577.3462,78.7716 559.6162,68.9316 " fill="none" id="haDes_DVDChapter-to-haDes_DVD" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#454645" points="554.37,66.02,560.2982,73.8849,558.7418,68.4463,564.1804,66.8899,554.37,66.02" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#000000" points="626.3839,116.1561,629.7226,125.0615,634.3193,121.3983,626.3839,116.1561" style="stroke:#000000;stroke-width:1.0;"/><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="10" x="638.5" y="124.5669">is</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="648.5" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="26" x="652.5" y="124.5669">part</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="678.5" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="12" x="682.5" y="124.5669">of</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="694.5" y="124.5669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="34" x="698.5" y="124.5669">[1..1]</text></g><g id="link_haDes_DVDChapter_premis_IntellectualEntity"><path codeLine="50" d="M643.5,217.1 C643.5,236.51 643.5,244.75 643.5,259.87 " fill="none" id="haDes_DVDChapter-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="643.5,277.87,649.5,259.87,637.5,259.87,643.5,277.87" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haDes_Image_premis_IntellectualEntity"><path codeLine="56" d="M893.27,204.55 C838.46,223.3 750.4413,253.4146 695.6813,272.1446 " fill="none" id="haDes_Image-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="678.65,277.97,697.6231,277.8217,693.7395,266.4675,678.65,277.97" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haObj_PhysicalCarrier_premis_StorageLocation"><path codeLine="59" d="M2074.03,66.1 C2093.07,98.34 2116.5752,138.1419 2131.0652,162.6719 " fill="none" id="haObj_PhysicalCarrier-to-premis_StorageLocation" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="2140.22,178.17,2136.2312,159.6203,2125.8992,165.7235,2140.22,178.17" style="stroke:#0000FF;stroke-width:1.0;"/></g><g id="link_haObj_PhysicalCarrier_skos_Concept"><path codeLine="62" d="M1954.75,66.04 C1933.03,75.08 1911.82,87.35 1895.5,104 C1875.06,124.85 1868.7629,154.1387 1866.4029,172.5487 " fill="none" id="haObj_PhysicalCarrier-to-skos_Concept" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#454645" points="1865.64,178.5,1870.7519,170.0817,1866.2758,173.5406,1862.8168,169.0644,1865.64,178.5" style="stroke:#454645;stroke-width:1.0;"/><polygon fill="#000000" points="1897.3078,123.9812,1905.3445,118.8957,1900.8205,115.1431,1897.3078,123.9812" style="stroke:#000000;stroke-width:1.0;"/><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="35" x="1909.5" y="117.0669">audio</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="1944.5" y="117.0669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="60" x="1948.5" y="117.0669">recording</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="2008.5" y="117.0669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="39" x="2012.5" y="117.0669">speed</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="2051.5" y="117.0669"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="34" x="2055.5" y="117.0669">[0..1]</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="63" x="1909.5" y="132.1997">iec-60094</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="1972.5" y="132.1997"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="28" x="1976.5" y="132.1997">type</text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="4" x="2004.5" y="132.1997"> </text><text fill="#000000" font-family="sans-serif" font-size="13" lengthAdjust="spacing" textLength="34" x="2008.5" y="132.1997">[0..1]</text></g><g id="link_haDes_Video_premis_IntellectualEntity"><path codeLine="65" d="M1076.77,217.04 C961.19,236.5 822.3999,259.8701 732.5799,275.0001 " fill="none" id="haDes_Video-to-premis_IntellectualEntity" style="stroke:#0000FF;stroke-width:1.0;stroke-dasharray:1.0,3.0;"/><polygon fill="none" points="714.83,277.99,733.5766,280.9167,731.5833,269.0834,714.83,277.99" style="stroke:#0000FF;stroke-width:1.0;"/></g></g></svg>
</div>

## Namespaces

| Prefix | URI      |
| :----- | :------- |
| dct     | [http://purl.org/dc/terms/](http://purl.org/dc/terms/) |
| ebucore     | [http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#](http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#) |
| haDes     | [https://data.hetarchief.be/ns/description/](https://data.hetarchief.be/ns/description/) |
| haObj     | [https://data.hetarchief.be/ns/object/](https://data.hetarchief.be/ns/object/) |
| org     | [http://www.w3.org/ns/org#](http://www.w3.org/ns/org#) |
| owl     | [http://www.w3.org/2002/07/owl#](http://www.w3.org/2002/07/owl#) |
| pav     | [http://purl.org/pav/](http://purl.org/pav/) |
| premis     | [http://www.loc.gov/premis/rdf/v3/](http://www.loc.gov/premis/rdf/v3/) |
| rdf     | [http://www.w3.org/1999/02/22-rdf-syntax-ns#](http://www.w3.org/1999/02/22-rdf-syntax-ns#) |
| rdfs     | [http://www.w3.org/2000/01/rdf-schema#](http://www.w3.org/2000/01/rdf-schema#) |
| rel     | [http://id.loc.gov/vocabulary/preservation/relationshipSubType/](http://id.loc.gov/vocabulary/preservation/relationshipSubType/) |
| schema     | [https://schema.org/](https://schema.org/) |
| sh     | [http://www.w3.org/ns/shacl#](http://www.w3.org/ns/shacl#) |
| skos     | [http://www.w3.org/2004/02/skos/core#](http://www.w3.org/2004/02/skos/core#) |
| vann     | [http://purl.org/vocab/vann/](http://purl.org/vocab/vann/) |
| xsd     | [http://www.w3.org/2001/XMLSchema#](http://www.w3.org/2001/XMLSchema#) |

## Classes & Properties

**Classes:** 
 [Audio](#haDes%3AAudio) |  [Carrier representation](#haObj%3ACarrierRepresentation) |  [Concept <svg class="svg-external-link" viewBox="0 0 24 24" aria-labelledby="svg-external-link-title"><use xlink:href="#svg-external-link"></use></svg>](../../rights/en#skos%3AConcept){:target="_blank"} |  [DVD](#haDes%3ADVD) |  [DVD chapter](#haDes%3ADVDChapter) |  [Image](#haDes%3AImage) |  [Physical carrier](#haObj%3APhysicalCarrier) |  [Video](#haDes%3AVideo)
## <a id="haDes%3AAudio"></a>Audio <small>[(haDes:Audio)](https://data.hetarchief.be/ns/description/Audio)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from digital born audio or an analog carrier of type audio.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AbroadcastingOrganization'></a>broadcasting organization <br> <small>[(haDes:broadcastingOrganization)](https://data.hetarchief.be/ns/description/broadcastingOrganization)</small> | The entity primarily responsible for distributing and making accessible an audiovisual item to third parties through broadcasting, sale, rental, etc. | `0..1` | [`org:Organization`](http://www.w3.org/ns/org#Organization)  |



## <a id="haObj%3ACarrierRepresentation"></a>Carrier representation <small>[(haObj:CarrierRepresentation)](https://data.hetarchief.be/ns/object/CarrierRepresentation)</small>


**Subclass of:** 
[Representation](#premis%3ARepresentation)

A physical or digital representation of an archived intellectual entity that is stored on a physical carrier such as a video tape, film reel, paper or canvas.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AnumberOfAudioChannels'></a>number of audio channels <br> <small>[(haDes:numberOfAudioChannels)](https://data.hetarchief.be/ns/description/numberOfAudioChannels)</small> | The number of parallel audio channels that the audio track contains. | `0..1` | [`xsd:nonNegativeInteger`](http://www.w3.org/2001/XMLSchema#nonNegativeInteger)  |
| <a id='haDes%3AnumberOfAudioTracks'></a>number of audio tracks <br> <small>[(haDes:numberOfAudioTracks)](https://data.hetarchief.be/ns/description/numberOfAudioTracks)</small> | The number of audio tracks that the representation contains. | `0..1` | [`xsd:nonNegativeInteger`](http://www.w3.org/2001/XMLSchema#nonNegativeInteger)  |



## <a id="haDes%3ADVD"></a>DVD <small>[(haDes:DVD)](https://data.hetarchief.be/ns/description/DVD)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from an analog carrier of type DVD, and represents the DVD as a whole.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AbroadcastingOrganization'></a>broadcasting organization <br> <small>[(haDes:broadcastingOrganization)](https://data.hetarchief.be/ns/description/broadcastingOrganization)</small> | The entity primarily responsible for distributing and making accessible an audiovisual item to third parties through broadcasting, sale, rental, etc. | `0..1` | [`org:Organization`](http://www.w3.org/ns/org#Organization)  |
| <a id='rel%3Ahsp'></a>has part <br> <small>[(rel:hsp)](http://id.loc.gov/vocabulary/preservation/relationshipSubType/hsp)</small> | Indicates the DVD chapters that make up the DVD as a whole. | `0..*` | [DVD chapter](#haDes%3ADVDChapter)  |



## <a id="haDes%3ADVDChapter"></a>DVD chapter <small>[(haDes:DVDChapter)](https://data.hetarchief.be/ns/description/DVDChapter)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from an analog carrier of type DVD, and represents a specific DVD chapter.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AchapterNumber'></a>chapter number <br> <small>[(haDes:chapterNumber)](https://data.hetarchief.be/ns/description/chapterNumber)</small> | Indicates the sequence number of the DVD chapter. | `1..1` | [`xsd:nonNegativeInteger`](http://www.w3.org/2001/XMLSchema#nonNegativeInteger)  |
| <a id='rel%3Aisi'></a>is part of <br> <small>[(rel:isi)](http://id.loc.gov/vocabulary/preservation/relationshipSubType/isi)</small> | Indicates the DVD that the chapter is part of. | `1..1` | [DVD](#haDes%3ADVD)  |



## <a id="haDes%3AImage"></a>Image <small>[(haDes:Image)](https://data.hetarchief.be/ns/description/Image)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from a digital born image or an analog carrier of type image.




## <a id="haObj%3APhysicalCarrier"></a>Physical carrier <small>[(haObj:PhysicalCarrier)](https://data.hetarchief.be/ns/object/PhysicalCarrier)</small>


**Subclass of:** 
[Storage location](#premis%3AStorageLocation)

**Subclasses:** 
[Audio reel](#haDes%3AAudioReel)
, [Image reel](#haDes%3AImageReel)

A physical carrier in which data, sound, images, etc., are stored.  For certain categories of material, the physical carrier consists of a storage medium (e.g., tape, film) sometimes encased in a plastic, metal, etc., housing (e.g., cassette, cartridge) that is an integral part of the item.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AaudioNoiseReduction'></a>audio noise reduction <br> <small>[(haDes:audioNoiseReduction)](https://data.hetarchief.be/ns/description/audioNoiseReduction)</small> | The technology used for noise reduction in audio. | `0..1` | [`xsd:string`](http://www.w3.org/2001/XMLSchema#string) <br>_Possible values: [`"DBX"`](DBX), [`"Dolby A"`](Dolby A), [`"Dolby B"`](Dolby B), [`"Dolby C"`](Dolby C), [`"Dolby D"`](Dolby D)_ |
| <a id='haDes%3AaudioRecordingSpeed'></a>audio recording speed <br> <small>[(haDes:audioRecordingSpeed)](https://data.hetarchief.be/ns/description/audioRecordingSpeed)</small> | The speed with which open reel audio or a gramophone record is recorded. | `0..1` | [Concept <svg class="svg-external-link" viewBox="0 0 24 24" aria-labelledby="svg-external-link-title"><use xlink:href="#svg-external-link"></use></svg>](../../rights/en#skos%3AConcept){:target="_blank"}  |
| <a id='haDes%3Aiec60094Type'></a>iec-60094 type <br> <small>[(haDes:iec60094Type)](https://data.hetarchief.be/ns/description/iec60094Type)</small> | The IEC-60094 Type of the compact cassette that indicates the magnetic material used as a binder on top of the polyester bottom layer of the cassette. | `0..1` | [Concept <svg class="svg-external-link" viewBox="0 0 24 24" aria-labelledby="svg-external-link-title"><use xlink:href="#svg-external-link"></use></svg>](../../rights/en#skos%3AConcept){:target="_blank"} <br>_Possible values: [`<https://data.hetarchief.be/id/iec60094-type/I>`](https://data.hetarchief.be/id/iec60094-type/I), [`<https://data.hetarchief.be/id/iec60094-type/II>`](https://data.hetarchief.be/id/iec60094-type/II), [`<https://data.hetarchief.be/id/iec60094-type/III>`](https://data.hetarchief.be/id/iec60094-type/III), [`<https://data.hetarchief.be/id/iec60094-type/IV>`](https://data.hetarchief.be/id/iec60094-type/IV)_ |



## <a id="haDes%3AVideo"></a>Video <small>[(haDes:Video)](https://data.hetarchief.be/ns/description/Video)</small>


**Subclass of:** 
[Intellectual entity](#premis%3AIntellectualEntity)

This class applies to media in meemoo's archive that is originally derived from digital born video or an analog carrier of type video.

| Property | Description | Cardinality | Datatype |
| :------ | :---------- | :---------- | :------- |
| <a id='haDes%3AbroadcastingOrganization'></a>broadcasting organization <br> <small>[(haDes:broadcastingOrganization)](https://data.hetarchief.be/ns/description/broadcastingOrganization)</small> | The entity primarily responsible for distributing and making accessible an audiovisual item to third parties through broadcasting, sale, rental, etc. | `0..1` | [`org:Organization`](http://www.w3.org/ns/org#Organization)  |



[^1]: Unique language tags required
<style>
#zoom {
  height: 60vh;
  padding: 5px;
}

#zoom > svg {
    width: 100%;
    height: 100%;
}

.svg-external-link {
  width: 16px;
  height: 16px;
}
</style>

<script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.5.0/dist/svg-pan-zoom.min.js"></script>
<script>
window.onload = (event) => {
  svgPanZoom('#zoom > svg', {controlIconsEnabled: true})
};
</script>
